--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <table width="712" height="942" border="1" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td width="125" style="text-align: center">姓 名</td>
-    <td width="158">&nbsp;</td>
+    <td width="158">&nbsp;张爽</td>
     <td width="89" style="text-align: center">性 别</td>
-    <td width="168">&nbsp;</td>
+    <td width="168">&nbsp;男</td>
     <td width="160" rowspan="6">&nbsp;</td>
   </tr>
   <tr>
